# interactive_stl_marker

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: param.yaml
launch/: generate_interactive_markers.launch
resources/: petbottle_rectangle.stl
rviz/: default.rviz
script/: interactive_stl_marker_node.py
src/interactive_stl_marker/: generate_interactive_marker.py
